# MyGeometry

./: .gitignore  CMakeLists.txt  MyGeometryConfig.cmake
include/: Douglas_Peucker.h  MyAngle.h  MyArc.h  MyCircle.h  MyLine.h  MyPoint.h  MyPolygon.h  MySegment.h
src/: Douglas_Peucker.cpp  MyAngle.cpp  MyArc.cpp  MyCircle.cpp  MyLine.cpp  MyPoint.cpp  MyPolygon.cpp  MySegment.cpp  main.cpp
